# openansys

./: ANSYS_AGENT_SPECS.md  Cargo.toml  LICENSE  README.md  ansys19-lsdyna-call.md  file.err  openansys.md  比赛方案书.md
.github/workflows/: static.yml
docs/: index.html  script.js  styles.css
input/: 桥.txt  桥_structured.txt
src/: ansys.rs  core.rs  history.rs  llm.rs  skills.rs  ui.rs
